# negclone

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: PRESET_FORMAT.md
negclone/: __init__.py  __main__.py  analysis.py  cli.py  downloader.py  fingerprint.py  flickr.py  inventory.py  local_inventory.py  models.py  scanner_profiles.py  utils.py
negclone/presets/: __init__.py  darktable.py  lightroom.py
tests/: conftest.py  test_fingerprint.py  test_flickr.py  test_inventory.py  test_presets.py
